VIITE-1880 ui-fix to align refresh btn to close btn

--- a/viite-UI/src/less/core/buttons.less
+++ b/viite-UI/src/less/core/buttons.less
@@ -478,10 +478,11 @@
 }
 
 .btn-refresh {
-	margin-bottom: 0;
+	border: none;
+	padding-right: 6px !important;
 	margin-top: 10px;
-	text-transform: none;
-	cursor: pointer;        /* make the cursor like hovering over an <a> element */
-	margin-right: 30px;
+	margin-right: 5px;
+	margin-bottom: 0;
 	float: right !important;
+	cursor: pointer;        /* make the cursor like hovering over an <a> element */
 }
